tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/uninitialized_use_before_declare_int8.fg
/; EXPECT_ERROR: VariableNotFound
print(x, "\n")
const x:int8 = 5

